# minimal-quic

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  go.mod  toolchain.cmake
internal/: packet.go  quic_packet.go
internal/packet/: packet.go  packet_test.go
internal/parser/: parser.go
internal/pool/: pool.go
src/: main_client.c  main_server.c  packet.c  packet.h  udp.c  udp.h
